--- a/backend/package.json
+++ b/backend/package.json
@@ -4,13 +4,18 @@
   "description": "The backend side of the newtech demo app",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node ./src/app.js"
   },
   "author": "Daniel Mendez",
   "license": "ISC",
   "dependencies": {
+    "celebrate": "^13.0.3",
+    "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "knex": "^0.21.5",
+    "mongoose": "^5.10.6",
     "sqlite3": "^5.0.0"
   }
 }
